tests/errors/test_26.x
// Do while conditional is not boolean

fn main() -> int {

    do {

    } while 'c';

}